# STRATA

./: .gitignore  CMakeLists.txt  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  build.sh
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: GainTrim.h  Meters.h
Source/link/: InstanceRegistry.cpp  InstanceRegistry.h
Source/ui/: ChannelView.h  ChoiceControls.h  LookAndFeel.h  VuMeter.h
design-system/: README.md  SKILL.md  colors_and_type.css
design-system/preview/: colors-buckets.html  colors-core.html  colors-health-wash.html  colors-state.html  colors-vu-face.html  comp-bucket-tabs.html  comp-buttons.html  comp-channel-column.html  comp-fader.html  comp-rotary-knob.html  spacing-radii-elevation.html  type-copy-tokens.html  type-ramp.html  type-wordmark.html
design-system/ui_kits/strata-plugin/: ChannelStrip.jsx  ChannelView.jsx  Knob.jsx  README.md  VuMeter.jsx  index.html
